editing package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "movie-database",
-  "homepage": "https://github.com/dtscorp/Frontend-/",
+  "homepage": "https://dtscorp.github.io/Frontend-/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
